<resources>
    <string name="app_name">V+视频</string>
    <string name="action_settings">Settings</string>
    <string name="request_failed">数据不见了，稍后再试吧</string>

    <string name="push_notification_title_template">Push: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="push_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="buffering">buffering</string>
    <string name="sort">Sort</string>

    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">首页</string>
    <string name="menu_hot">热门视频</string>
    <string name="menu_series">系列短剧</string>
    <string name="menu_stage">幕后花絮</string>
    <string name="menu_stared">小编推荐</string>
    <string name="menu_random">随便看看</string>
    <string name="menu_setting">设置</string>
    <string name="mail_to">mailto:vplus@avenwu.net</string>
    <string name="no_email_provider">没有找到邮件客户端</string>
     <string name="default_feedback_devices_info">\n\n[设备: %1$s, 尺寸: %2$s, 系统版本: %3$s (API Level
    %4$s), 应用版本: %5$s, 当前网络: %6$s]</string>
    <string name="menu_about">关于</string>
    <string name="version_name">版本 %s</string>
    <string name="app_information">\t\tV+客户端为Android平台的一款视频聚合播放软件，本身不制作和提供视频，所有数据均来源于V
        电影/优酷/土豆等.\n\n\t\t如发现任何存在版权问题或不希望被展示的视频，请及时联系我们</string>
    <string name="feedback_mail">联系方式：vplus@avenwu.net</string>
    <string name="copyright">V+视频 © 2015 小文字</string>
</resources>
