<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/menu_hot"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_hot"/>
        <item
            android:id="@+id/menu_stared"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_stared"/>
        <item
            android:id="@+id/menu_stage"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_stage"/>
        <item
            android:id="@+id/menu_series"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_series"/>
        <item
            android:id="@+id/menu_random"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_random"/>
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:icon="@android:drawable/ic_menu_search"
                android:title="Sub item 1"/>
            <item
                android:icon="@android:drawable/ic_menu_search"
                android:title="Sub item 2"/>
        </menu>
    </item>

</menu>